# GameOfLife

./: CMakeLists.txt  README.md  Source.cpp
